--- a/infra/template.yml
+++ b/infra/template.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 
-Description: Cria uma VPC
+Description: Cria uma VPC, duas subnets públicas com NAT Gateway e duas subnets privadas
 
 Parameters:
   
