--- a/infra/template.yml
+++ b/infra/template.yml
@@ -8,9 +8,9 @@ Parameters:
     Type: String
     Default: VPCDefault
   
-  TechTeamEmail:
+  Owner:
     Type: String
-    Default: gian.hd@gmail.com
+    Default: tg
 
 Mappings:
 
@@ -42,8 +42,8 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref VPCName
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
   
   PublicSubnet1:
     Type: AWS::EC2::Subnet
@@ -60,8 +60,8 @@ Resources:
             Fn::Join: [ '', [ !Ref VPCName, "-Public-", !Select [ 0, !FindInMap [ AZRegions, !Ref AWS::Region, AZs ] ] ] ]
         - Key: Network
           Value: Public
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
 
   PublicSubnet2:
     Type: AWS::EC2::Subnet
@@ -78,8 +78,8 @@ Resources:
             Fn::Join: [ '', [ !Ref VPCName, "-Public-", !Select [ 1, !FindInMap [ AZRegions, !Ref AWS::Region, AZs ] ] ] ]
         - Key: Network
           Value: Public
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
 
   PrivateSubnet1:
     Type: AWS::EC2::Subnet
@@ -95,8 +95,8 @@ Resources:
             Fn::Join: [ '', [ !Ref VPCName, "-Private-", !Select [ 0, !FindInMap [ AZRegions, !Ref AWS::Region, AZs ] ] ] ]
         - Key: Network
           Value: Private
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
 
   PrivateSubnet2:
     Type: AWS::EC2::Subnet
@@ -112,8 +112,8 @@ Resources:
             Fn::Join: [ '', [ !Ref VPCName, "-Private-", !Select [ 1, !FindInMap [ AZRegions, !Ref AWS::Region, AZs ] ] ] ]
         - Key: Network
           Value: Private
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
   
   InternetGateway:
     Type: AWS::EC2::InternetGateway
@@ -122,8 +122,8 @@ Resources:
         - Key: Name  
           Value:
             Fn::Join: [ '', [ !Ref VPCName, "-IGW" ] ]
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
   
   VPCGatewayAttachment:
     Type: AWS::EC2::VPCGatewayAttachment
@@ -139,8 +139,8 @@ Resources:
         - Key: Name  
           Value:
             Fn::Join: [ '', [ !Ref VPCName, "-PublicRouteTable" ] ]
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
   
   PublicRoute:
     Type: AWS::EC2::Route
@@ -170,8 +170,8 @@ Resources:
         - Key: Name  
           Value:
             Fn::Join: [ '', [ !Ref VPCName, "PublicNetworkAcl" ] ]
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
   
   InboundHTTPPublicNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
@@ -243,8 +243,8 @@ Resources:
         - Key: Name  
           Value:
             Fn::Join: [ '', [ !Ref VPCName, "PrivateRouteTable1" ] ]
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
 
   PrivateRouteTable2:
     Type: AWS::EC2::RouteTable
@@ -254,8 +254,8 @@ Resources:
         - Key: Name  
           Value:
             Fn::Join: [ '', [ !Ref VPCName, "PrivateRouteTable2" ] ]
-        - Key: TechTeamEmail
-          Value: !Ref TechTeamEmail
+        - Key: Owner
+          Value: !Ref Owner
   
   PrivateRoute1:
     Type: AWS::EC2::Route
@@ -284,7 +284,6 @@ Resources:
     Properties:
       SubnetId: !Ref PrivateSubnet2
       RouteTableId: !Ref PrivateRouteTable2
-
 
 Outputs:
 
