--- a/infra/template.yml
+++ b/infra/template.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 
-Description: Cria uma VPC, duas subnets públicas e duas subnets privadas
+Description: Creates a VPC, two private subnets and two public subnets
 
 Parameters:
   
